bug 669175 - [harfbuzz] fix indexing in reverse_range() to avoid pathological perf & incorrect results. r=behdad